<resources>
    <string name="app_name">CloudFirestore</string>

    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_no_account_yet_label">No account yet?</string>
    <string name="login_register_label">Create one</string>

    <string name="register_already_member">Already a member?</string>
    <string name="register_log_in">Login</string>
    <string name="register_button">Register</string>

    <string name="error_field_cant_be_empty_message">Field can\'t be empty</string>
    <string name="error_registering">Failed registering user</string>
    <string name="error_login_in">Failed login in user</string>
    <string name="error_unfilled_fields">You must fill in all the fields</string>
    <string name="error_inform_email">Please enter a valid email address</string>
    <string name="menu_logout">Logout</string>
    <string name="quote_phrase">Frase</string>
    <string name="quote_author">Autor</string>
    <string name="quote_dialog_button_create">CREATE</string>
    <string name="quote_dialog_button_cancel">CANCEL</string>
    <string name="general_label_ok">Ok</string>
    <string name="general_label_cancel">Cancelar</string>
    <string name="quote_edit_title">Editando citação:</string>

</resources>
