<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/title_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/quote_phrase_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quote_phrase"
            android:imeOptions="actionNext"
            android:inputType="textCapWords" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/content_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/quote_author_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quote_author"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine" />

    </android.support.design.widget.TextInputLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:text="@string/quote_dialog_button_create"
            android:textColor="@color/linkBlue"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:layout_toStartOf="@+id/create_button"
            android:text="@string/quote_dialog_button_cancel"
            android:textColor="@color/linkBlue"
            android:textSize="15sp" />

    </RelativeLayout>

</LinearLayout>